<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/p2"
        android:layout_marginStart="@dimen/p1"
        android:layout_marginEnd="@dimen/p1"
        app:cardCornerRadius="@dimen/p2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:id="@+id/img_goods"
                android:scaleType="centerCrop"/>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/p1"
                android:layout_marginEnd="@dimen/p2"
                android:layout_marginBottom="@dimen/p2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@android:color/background_dark"
                    android:text="@string/test_goods_name"
                    android:id="@+id/txt_goods_name"
                    android:layout_marginTop="@dimen/p1"
                    android:textStyle="bold"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:maxEms="16"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:text="@string/test_price"
                    android:textColor="@color/txt_color_red"
                    android:layout_marginTop="@dimen/p2"
                    android:id="@+id/txt_price"
                    android:textStyle="bold"
                    android:layout_below="@id/txt_goods_name"
                    />

                <com.example.lib_common.widget.flowlayout.TagFlowLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:id="@+id/tlayout_tag"
                    android:layout_below="@id/txt_price"
                    android:layout_marginTop="@dimen/p2"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tlayout_tag"
                    android:layout_marginTop="@dimen/p2"
                    android:layout_alignParentStart="true"
                    android:gravity="center_vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/img_avatar"
                        android:layout_width="@dimen/p4"
                        android:layout_height="@dimen/p4"
                        />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@string/test_name"
                        android:textColor="@android:color/background_dark"
                        android:textSize="10sp"
                        android:id="@+id/txt_name"
                        android:maxEms="16"
                        android:singleLine="true"
                        android:ellipsize="end"
                       />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="10sp"
                        android:id="@+id/txt_number_love"
                        android:textColor="@color/txt_normal_color"
                        android:text="@string/test_number_love"/>
                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>



    </androidx.cardview.widget.CardView>
</layout>